Fixed bug #42468 (Write lock on file_get_contents fails when using a compression stream).